// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`makeMatcherFromSearch should filter correctly on category 1`] = `
Array [
  Object {
    "categories": Array [
      "cozy",
    ],
    "developer": Object {
      "name": "Cozy",
    },
    "editor": "Cozy",
    "icon": "<svg></svg>",
    "installed": true,
    "isInRegistry": true,
    "label": 1,
    "name": "Collect",
    "name_prefix": "Cozy",
    "permissions": Object {
      "mock": Object {
        "type": "io.mock.doctype",
      },
      "mock2": Object {
        "type": "io.mock.doctype2",
      },
    },
    "related": "http://collect.cozy.mock/",
    "slug": "collect",
    "tags": Array [
      "konnector",
      "collect",
      "bills",
      "providers",
      "files",
    ],
    "type": "webapp",
    "uninstallable": false,
    "version": "3.0.0",
    "versions": Object {
      "beta": Array [
        "3.0.0",
      ],
      "dev": Array [
        "3.0.0",
      ],
      "stable": Array [
        "3.0.0",
      ],
    },
  },
  Object {
    "categories": Array [
      "cozy",
    ],
    "developer": Object {
      "name": "Cozy",
    },
    "editor": "Cozy",
    "icon": "<svg></svg>",
    "installed": true,
    "name": "Drive",
    "name_prefix": "Cozy",
    "permissions": Object {
      "mock2": Object {
        "type": "io.mock.doctype2",
      },
    },
    "related": "http://drive.cozy.mock/",
    "slug": "drive",
    "tags": Array [
      "search",
      "files",
      "folders",
    ],
    "type": "webapp",
    "uninstallable": false,
    "version": "3.0.0-beta89bnhj3993",
  },
  Object {
    "categories": Array [
      "cozy",
    ],
    "developer": Object {
      "name": "Cozy",
    },
    "editor": "Cozy",
    "icon": "<svg></svg>",
    "isInRegistry": true,
    "locales": Object {
      "en": Object {
        "long_description": "A long description finally short",
      },
    },
    "name": "Photos",
    "name_prefix": "Cozy",
    "slug": "photos",
    "type": "webapp",
    "uninstallable": true,
    "versions": Object {
      "beta": Array [
        "3.0.0",
      ],
      "dev": Array [
        "3.0.0",
      ],
      "stable": Array [
        "3.0.0",
      ],
    },
  },
]
`;

exports[`makeMatcherFromSearch should filter correctly on doctype 1`] = `
Array [
  Object {
    "categories": Array [
      "cozy",
    ],
    "developer": Object {
      "name": "Cozy",
    },
    "editor": "Cozy",
    "icon": "<svg></svg>",
    "installed": true,
    "isInRegistry": true,
    "label": 1,
    "name": "Collect",
    "name_prefix": "Cozy",
    "permissions": Object {
      "mock": Object {
        "type": "io.mock.doctype",
      },
      "mock2": Object {
        "type": "io.mock.doctype2",
      },
    },
    "related": "http://collect.cozy.mock/",
    "slug": "collect",
    "tags": Array [
      "konnector",
      "collect",
      "bills",
      "providers",
      "files",
    ],
    "type": "webapp",
    "uninstallable": false,
    "version": "3.0.0",
    "versions": Object {
      "beta": Array [
        "3.0.0",
      ],
      "dev": Array [
        "3.0.0",
      ],
      "stable": Array [
        "3.0.0",
      ],
    },
  },
  Object {
    "categories": Array [
      "cozy",
    ],
    "developer": Object {
      "name": "Cozy",
    },
    "editor": "Cozy",
    "icon": "<svg></svg>",
    "installed": true,
    "name": "Drive",
    "name_prefix": "Cozy",
    "permissions": Object {
      "mock2": Object {
        "type": "io.mock.doctype2",
      },
    },
    "related": "http://drive.cozy.mock/",
    "slug": "drive",
    "tags": Array [
      "search",
      "files",
      "folders",
    ],
    "type": "webapp",
    "uninstallable": false,
    "version": "3.0.0-beta89bnhj3993",
  },
]
`;

exports[`makeMatcherFromSearch should filter correctly on pending update apps 1`] = `
Array [
  Object {
    "availableVersion": "3.0.0",
    "categories": Array [
      "partners",
    ],
    "icon": "<svg></svg>",
    "installed": true,
    "isInRegistry": true,
    "name": "Tasky",
    "slug": "tasky",
    "type": "webapp",
    "uninstallable": true,
    "versions": Object {
      "beta": Array [
        "3.0.0",
        "1.0.0",
      ],
      "dev": Array [
        "3.0.0",
        "1.0.0",
      ],
      "stable": Array [
        "3.0.0",
        "1.0.0",
      ],
    },
  },
]
`;

exports[`makeMatcherFromSearch should filter correctly on tags 1`] = `
Array [
  Object {
    "categories": Array [
      "cozy",
    ],
    "developer": Object {
      "name": "Cozy",
    },
    "editor": "Cozy",
    "icon": "<svg></svg>",
    "installed": true,
    "isInRegistry": true,
    "label": 1,
    "name": "Collect",
    "name_prefix": "Cozy",
    "permissions": Object {
      "mock": Object {
        "type": "io.mock.doctype",
      },
      "mock2": Object {
        "type": "io.mock.doctype2",
      },
    },
    "related": "http://collect.cozy.mock/",
    "slug": "collect",
    "tags": Array [
      "konnector",
      "collect",
      "bills",
      "providers",
      "files",
    ],
    "type": "webapp",
    "uninstallable": false,
    "version": "3.0.0",
    "versions": Object {
      "beta": Array [
        "3.0.0",
      ],
      "dev": Array [
        "3.0.0",
      ],
      "stable": Array [
        "3.0.0",
      ],
    },
  },
  Object {
    "categories": Array [
      "transport",
    ],
    "developer": Object {
      "name": "Cozy",
    },
    "icon": "<svg></svg>",
    "installed": true,
    "isInRegistry": true,
    "name": "Trinlane",
    "permissions": Object {
      "mock": Object {
        "type": "io.mock.doctype",
      },
    },
    "slug": "konnector-trinlane",
    "tags": Array [
      "transport",
      "files",
      "bills",
    ],
    "type": "konnector",
    "uninstallable": true,
    "version": "0.1.0",
    "versions": Object {
      "beta": Array [
        "0.1.0",
      ],
      "dev": Array [
        "0.1.0",
      ],
      "stable": Array [
        "0.1.0",
      ],
    },
  },
]
`;

exports[`makeMatcherFromSearch should filter correctly on type 1`] = `
Array [
  Object {
    "categories": Array [
      "cozy",
    ],
    "developer": Object {
      "name": "Cozy",
    },
    "editor": "Cozy",
    "icon": "<svg></svg>",
    "installed": true,
    "isInRegistry": true,
    "label": 1,
    "name": "Collect",
    "name_prefix": "Cozy",
    "permissions": Object {
      "mock": Object {
        "type": "io.mock.doctype",
      },
      "mock2": Object {
        "type": "io.mock.doctype2",
      },
    },
    "related": "http://collect.cozy.mock/",
    "slug": "collect",
    "tags": Array [
      "konnector",
      "collect",
      "bills",
      "providers",
      "files",
    ],
    "type": "webapp",
    "uninstallable": false,
    "version": "3.0.0",
    "versions": Object {
      "beta": Array [
        "3.0.0",
      ],
      "dev": Array [
        "3.0.0",
      ],
      "stable": Array [
        "3.0.0",
      ],
    },
  },
  Object {
    "categories": Array [
      "others",
    ],
    "developer": Object {
      "name": "Cozy",
    },
    "editor": "Cozy",
    "icon": "<svg></svg>",
    "isInRegistry": true,
    "locales": Object {
      "name": "For Dev Only",
    },
    "name": "DevOnly",
    "slug": "devonly",
    "type": "webapp",
    "uninstallable": true,
    "versions": Object {
      "beta": Array [],
      "dev": Array [
        "1.0.0-betaojdkehy989ekhflldh",
      ],
      "stable": Array [],
    },
  },
  Object {
    "categories": Array [
      "cozy",
    ],
    "developer": Object {
      "name": "Cozy",
    },
    "editor": "Cozy",
    "icon": "<svg></svg>",
    "installed": true,
    "name": "Drive",
    "name_prefix": "Cozy",
    "permissions": Object {
      "mock2": Object {
        "type": "io.mock.doctype2",
      },
    },
    "related": "http://drive.cozy.mock/",
    "slug": "drive",
    "tags": Array [
      "search",
      "files",
      "folders",
    ],
    "type": "webapp",
    "uninstallable": false,
    "version": "3.0.0-beta89bnhj3993",
  },
  Object {
    "categories": Array [
      "cozy",
    ],
    "developer": Object {
      "name": "Cozy",
    },
    "editor": "Cozy",
    "icon": "<svg></svg>",
    "isInRegistry": true,
    "locales": Object {
      "en": Object {
        "long_description": "A long description finally short",
      },
    },
    "name": "Photos",
    "name_prefix": "Cozy",
    "slug": "photos",
    "type": "webapp",
    "uninstallable": true,
    "versions": Object {
      "beta": Array [
        "3.0.0",
      ],
      "dev": Array [
        "3.0.0",
      ],
      "stable": Array [
        "3.0.0",
      ],
    },
  },
  Object {
    "availableVersion": "3.0.0",
    "categories": Array [
      "partners",
    ],
    "icon": "<svg></svg>",
    "installed": true,
    "isInRegistry": true,
    "name": "Tasky",
    "slug": "tasky",
    "type": "webapp",
    "uninstallable": true,
    "versions": Object {
      "beta": Array [
        "3.0.0",
        "1.0.0",
      ],
      "dev": Array [
        "3.0.0",
        "1.0.0",
      ],
      "stable": Array [
        "3.0.0",
        "1.0.0",
      ],
    },
  },
]
`;

exports[`makeMatcherFromSearch should handle correctly multi filters 1`] = `
Array [
  Object {
    "categories": Array [
      "transport",
    ],
    "developer": Object {
      "name": "Cozy",
    },
    "icon": "<svg></svg>",
    "installed": true,
    "isInRegistry": true,
    "name": "Trinlane",
    "permissions": Object {
      "mock": Object {
        "type": "io.mock.doctype",
      },
    },
    "slug": "konnector-trinlane",
    "tags": Array [
      "transport",
      "files",
      "bills",
    ],
    "type": "konnector",
    "uninstallable": true,
    "version": "0.1.0",
    "versions": Object {
      "beta": Array [
        "0.1.0",
      ],
      "dev": Array [
        "0.1.0",
      ],
      "stable": Array [
        "0.1.0",
      ],
    },
  },
]
`;

exports[`makeMatcherFromSearch should not throw error if app with malformed permission and search on doctype 1`] = `Array []`;

exports[`makeMatcherFromSearch should not throw error if app with no categories and search on category 1`] = `Array []`;

exports[`makeMatcherFromSearch should not throw error if search is not provided 1`] = `
Array [
  Object {
    "categories": Array [
      "cozy",
    ],
    "developer": Object {
      "name": "Cozy",
    },
    "editor": "Cozy",
    "icon": "<svg></svg>",
    "installed": true,
    "isInRegistry": true,
    "label": 1,
    "name": "Collect",
    "name_prefix": "Cozy",
    "permissions": Object {
      "mock": Object {
        "type": "io.mock.doctype",
      },
      "mock2": Object {
        "type": "io.mock.doctype2",
      },
    },
    "related": "http://collect.cozy.mock/",
    "slug": "collect",
    "tags": Array [
      "konnector",
      "collect",
      "bills",
      "providers",
      "files",
    ],
    "type": "webapp",
    "uninstallable": false,
    "version": "3.0.0",
    "versions": Object {
      "beta": Array [
        "3.0.0",
      ],
      "dev": Array [
        "3.0.0",
      ],
      "stable": Array [
        "3.0.0",
      ],
    },
  },
  Object {
    "categories": Array [
      "others",
    ],
    "developer": Object {
      "name": "Cozy",
    },
    "editor": "Cozy",
    "icon": "<svg></svg>",
    "isInRegistry": true,
    "locales": Object {
      "name": "For Dev Only",
    },
    "name": "DevOnly",
    "slug": "devonly",
    "type": "webapp",
    "uninstallable": true,
    "versions": Object {
      "beta": Array [],
      "dev": Array [
        "1.0.0-betaojdkehy989ekhflldh",
      ],
      "stable": Array [],
    },
  },
  Object {
    "categories": Array [
      "cozy",
    ],
    "developer": Object {
      "name": "Cozy",
    },
    "editor": "Cozy",
    "icon": "<svg></svg>",
    "installed": true,
    "name": "Drive",
    "name_prefix": "Cozy",
    "permissions": Object {
      "mock2": Object {
        "type": "io.mock.doctype2",
      },
    },
    "related": "http://drive.cozy.mock/",
    "slug": "drive",
    "tags": Array [
      "search",
      "files",
      "folders",
    ],
    "type": "webapp",
    "uninstallable": false,
    "version": "3.0.0-beta89bnhj3993",
  },
  Object {
    "categories": Array [
      "isp",
      "telecom",
    ],
    "developer": Object {
      "name": "Cozy",
    },
    "icon": "<svg></svg>",
    "isInRegistry": true,
    "name": "Bouilligue",
    "slug": "konnector-bouilligue",
    "type": "konnector",
    "uninstallable": true,
    "versions": Object {
      "beta": Array [
        "0.1.0",
      ],
      "dev": Array [
        "0.1.0",
      ],
      "stable": Array [
        "0.1.0",
      ],
    },
  },
  Object {
    "categories": Array [
      "transport",
    ],
    "developer": Object {
      "name": "Cozy",
    },
    "icon": "<svg></svg>",
    "installed": true,
    "isInRegistry": true,
    "name": "Trinlane",
    "permissions": Object {
      "mock": Object {
        "type": "io.mock.doctype",
      },
    },
    "slug": "konnector-trinlane",
    "tags": Array [
      "transport",
      "files",
      "bills",
    ],
    "type": "konnector",
    "uninstallable": true,
    "version": "0.1.0",
    "versions": Object {
      "beta": Array [
        "0.1.0",
      ],
      "dev": Array [
        "0.1.0",
      ],
      "stable": Array [
        "0.1.0",
      ],
    },
  },
  Object {
    "categories": Array [
      "cozy",
    ],
    "developer": Object {
      "name": "Cozy",
    },
    "editor": "Cozy",
    "icon": "<svg></svg>",
    "isInRegistry": true,
    "locales": Object {
      "en": Object {
        "long_description": "A long description finally short",
      },
    },
    "name": "Photos",
    "name_prefix": "Cozy",
    "slug": "photos",
    "type": "webapp",
    "uninstallable": true,
    "versions": Object {
      "beta": Array [
        "3.0.0",
      ],
      "dev": Array [
        "3.0.0",
      ],
      "stable": Array [
        "3.0.0",
      ],
    },
  },
  Object {
    "availableVersion": "3.0.0",
    "categories": Array [
      "partners",
    ],
    "icon": "<svg></svg>",
    "installed": true,
    "isInRegistry": true,
    "name": "Tasky",
    "slug": "tasky",
    "type": "webapp",
    "uninstallable": true,
    "versions": Object {
      "beta": Array [
        "3.0.0",
        "1.0.0",
      ],
      "dev": Array [
        "3.0.0",
        "1.0.0",
      ],
      "stable": Array [
        "3.0.0",
        "1.0.0",
      ],
    },
  },
]
`;

exports[`makeMatcherFromSearch should work even for an unsupported filter 1`] = `
Array [
  Object {
    "categories": Array [
      "cozy",
    ],
    "developer": Object {
      "name": "Cozy",
    },
    "editor": "Cozy",
    "icon": "<svg></svg>",
    "installed": true,
    "isInRegistry": true,
    "label": 1,
    "name": "Collect",
    "name_prefix": "Cozy",
    "permissions": Object {
      "mock": Object {
        "type": "io.mock.doctype",
      },
      "mock2": Object {
        "type": "io.mock.doctype2",
      },
    },
    "related": "http://collect.cozy.mock/",
    "slug": "collect",
    "tags": Array [
      "konnector",
      "collect",
      "bills",
      "providers",
      "files",
    ],
    "type": "webapp",
    "uninstallable": false,
    "version": "3.0.0",
    "versions": Object {
      "beta": Array [
        "3.0.0",
      ],
      "dev": Array [
        "3.0.0",
      ],
      "stable": Array [
        "3.0.0",
      ],
    },
  },
  Object {
    "categories": Array [
      "others",
    ],
    "developer": Object {
      "name": "Cozy",
    },
    "editor": "Cozy",
    "icon": "<svg></svg>",
    "isInRegistry": true,
    "locales": Object {
      "name": "For Dev Only",
    },
    "name": "DevOnly",
    "slug": "devonly",
    "type": "webapp",
    "uninstallable": true,
    "versions": Object {
      "beta": Array [],
      "dev": Array [
        "1.0.0-betaojdkehy989ekhflldh",
      ],
      "stable": Array [],
    },
  },
  Object {
    "categories": Array [
      "cozy",
    ],
    "developer": Object {
      "name": "Cozy",
    },
    "editor": "Cozy",
    "icon": "<svg></svg>",
    "installed": true,
    "name": "Drive",
    "name_prefix": "Cozy",
    "permissions": Object {
      "mock2": Object {
        "type": "io.mock.doctype2",
      },
    },
    "related": "http://drive.cozy.mock/",
    "slug": "drive",
    "tags": Array [
      "search",
      "files",
      "folders",
    ],
    "type": "webapp",
    "uninstallable": false,
    "version": "3.0.0-beta89bnhj3993",
  },
  Object {
    "categories": Array [
      "isp",
      "telecom",
    ],
    "developer": Object {
      "name": "Cozy",
    },
    "icon": "<svg></svg>",
    "isInRegistry": true,
    "name": "Bouilligue",
    "slug": "konnector-bouilligue",
    "type": "konnector",
    "uninstallable": true,
    "versions": Object {
      "beta": Array [
        "0.1.0",
      ],
      "dev": Array [
        "0.1.0",
      ],
      "stable": Array [
        "0.1.0",
      ],
    },
  },
  Object {
    "categories": Array [
      "transport",
    ],
    "developer": Object {
      "name": "Cozy",
    },
    "icon": "<svg></svg>",
    "installed": true,
    "isInRegistry": true,
    "name": "Trinlane",
    "permissions": Object {
      "mock": Object {
        "type": "io.mock.doctype",
      },
    },
    "slug": "konnector-trinlane",
    "tags": Array [
      "transport",
      "files",
      "bills",
    ],
    "type": "konnector",
    "uninstallable": true,
    "version": "0.1.0",
    "versions": Object {
      "beta": Array [
        "0.1.0",
      ],
      "dev": Array [
        "0.1.0",
      ],
      "stable": Array [
        "0.1.0",
      ],
    },
  },
  Object {
    "categories": Array [
      "cozy",
    ],
    "developer": Object {
      "name": "Cozy",
    },
    "editor": "Cozy",
    "icon": "<svg></svg>",
    "isInRegistry": true,
    "locales": Object {
      "en": Object {
        "long_description": "A long description finally short",
      },
    },
    "name": "Photos",
    "name_prefix": "Cozy",
    "slug": "photos",
    "type": "webapp",
    "uninstallable": true,
    "versions": Object {
      "beta": Array [
        "3.0.0",
      ],
      "dev": Array [
        "3.0.0",
      ],
      "stable": Array [
        "3.0.0",
      ],
    },
  },
  Object {
    "availableVersion": "3.0.0",
    "categories": Array [
      "partners",
    ],
    "icon": "<svg></svg>",
    "installed": true,
    "isInRegistry": true,
    "name": "Tasky",
    "slug": "tasky",
    "type": "webapp",
    "uninstallable": true,
    "versions": Object {
      "beta": Array [
        "3.0.0",
        "1.0.0",
      ],
      "dev": Array [
        "3.0.0",
        "1.0.0",
      ],
      "stable": Array [
        "3.0.0",
        "1.0.0",
      ],
    },
  },
]
`;
